--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -44,7 +44,7 @@ jobs:
         echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > app/release-keystore.jks
         echo "Keystore decoded successfully"
     
-    # Build Release APK if keystore exists, otherwise Debug
+    # Build Release APK if keystore exists
     - name: Build Release APK
       if: secrets.KEYSTORE_BASE64
       run: ./gradlew assembleRelease --stacktrace --no-daemon
@@ -52,8 +52,8 @@ jobs:
         KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
         KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
     
+    # Always build Debug APK as fallback
     - name: Build Debug APK
-      if: ${{ !secrets.KEYSTORE_BASE64 }}
       run: ./gradlew assembleDebug --stacktrace --no-daemon
     
     # Upload Release APK if it exists
@@ -65,9 +65,8 @@ jobs:
         path: app/build/outputs/apk/release/app-release.apk
         retention-days: 30
     
-    # Upload Debug APK if Release doesn't exist
+    # Always upload Debug APK
     - name: Upload Debug APK
-      if: ${{ !secrets.KEYSTORE_BASE64 }}
       uses: actions/upload-artifact@v4
       with:
         name: FastLaneWidget-Debug
