--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -9,6 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    env:
+      KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -39,33 +44,30 @@ jobs:
     
     # Decode keystore from base64 secret (if exists)
     - name: Decode Keystore
-      if: secrets.KEYSTORE_BASE64
+      if: env.KEYSTORE_BASE64 != ''
       run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > app/release-keystore.jks
+        echo "$KEYSTORE_BASE64" | base64 -d > app/release-keystore.jks
         echo "Keystore decoded successfully"
     
     # Build Release APK if keystore exists
     - name: Build Release APK
-      if: secrets.KEYSTORE_BASE64
+      if: env.KEYSTORE_BASE64 != ''
       run: ./gradlew assembleRelease --stacktrace --no-daemon
-      env:
-        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
     
-    # Always build Debug APK as fallback
+    # Build Debug APK
     - name: Build Debug APK
       run: ./gradlew assembleDebug --stacktrace --no-daemon
     
     # Upload Release APK if it exists
     - name: Upload Release APK
-      if: secrets.KEYSTORE_BASE64
+      if: env.KEYSTORE_BASE64 != ''
       uses: actions/upload-artifact@v4
       with:
         name: FastLaneWidget-Release
         path: app/build/outputs/apk/release/app-release.apk
         retention-days: 30
     
-    # Always upload Debug APK
+    # Upload Debug APK
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
