--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.fastlane.pricewidget"
         minSdk 26
         targetSdk 34
-        versionCode 3100
-        versionName "3.1.0"
+        versionCode 3200
+        versionName "3.2.0"
     }
 
     signingConfigs {
@@ -57,6 +57,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     
-    // FloatingView library for ChatHeads-style floating widgets
-    implementation 'com.github.recruit-lifestyle:FloatingView:2.4.5'
+    // Floating-Bubble-View library with expand/minimize support
+    implementation 'io.github.torrydo:floating-bubble-view:0.6.5'
 }
