--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     
-    // Floating-Bubble-View library with expand/minimize support
-    implementation 'io.github.torrydo:floating-bubble-view:0.6.5'
+    // FloatingView library for ChatHeads-style floating widgets
+    implementation 'com.github.recruit-lifestyle:FloatingView:2.4.5'
 }
