remove draawer mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,16 @@
                 android:resource="@xml/widget_info" />
         </receiver>
 
+        <!-- Screen On Receiver -->
+        <receiver
+            android:name=".ScreenOnReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.SCREEN_ON" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
