--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -24,48 +24,39 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    # Cache generated wrapper files (gradlew, gradle-wrapper.jar, etc)
-    - name: Cache Gradle wrapper files
-      id: cache-wrapper
-      uses: actions/cache@v3
-      with:
-        path: |
-          gradle/wrapper/gradle-wrapper.jar
-          gradlew
-          gradlew.bat
-        key: gradle-wrapper-8.0
+    # Setup Gradle with built-in caching (handles dependencies automatically)
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
 
-    # Cache Gradle dependencies (libraries needed for building)
-    - name: Cache Gradle dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          gradle-${{ runner.os }}-
-
-    # Only download and generate wrapper if NOT cached
-    - name: Install Gradle
-      if: steps.cache-wrapper.outputs.cache-hit != 'true'
+    # Fallback: Generate wrapper if files are missing
+    - name: Check if wrapper exists
+      id: check-wrapper
       run: |
-        echo "Wrapper not cached, downloading Gradle 8.0..."
+        if [ ! -f "gradlew" ] || [ ! -f "gradle/wrapper/gradle-wrapper.jar" ]; then
+          echo "wrapper_missing=true" >> $GITHUB_OUTPUT
+        else
+          echo "wrapper_missing=false" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Install Gradle (if wrapper missing)
+      if: steps.check-wrapper.outputs.wrapper_missing == 'true'
+      run: |
+        echo "Wrapper not found, downloading Gradle 8.0..."
         wget https://services.gradle.org/distributions/gradle-8.0-bin.zip
         unzip -q gradle-8.0-bin.zip
         export GRADLE_HOME=$PWD/gradle-8.0
         export PATH=$GRADLE_HOME/bin:$PATH
         gradle --version
 
-    - name: Generate Gradle Wrapper
-      if: steps.cache-wrapper.outputs.cache-hit != 'true'
+    - name: Generate Gradle Wrapper (if wrapper missing)
+      if: steps.check-wrapper.outputs.wrapper_missing == 'true'
       run: |
         echo "Generating wrapper files..."
         export GRADLE_HOME=$PWD/gradle-8.0
         export PATH=$GRADLE_HOME/bin:$PATH
         gradle wrapper --gradle-version 8.0
         ls -la gradle/wrapper/
-    
+
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     
